@@ -1,6 +1,4 @@
 Lurking in the shadows and corners.
 
-- The yahoo quotes plugin has a big lag time for french quotes, not updating with the latest quote.
-
 FIX:
 
