@@ -12,13 +12,14 @@
 <h3>Requirements</h3>
 <ol>
   <li>A Linux or FreeBSD compatible operating system.</li>
-  <li>At least the <a href="http://www.trolltech.com/">Qt 3.3*</a>
-development library. </li>
+  <li>The <a href="http://www.trolltech.com/">Qt 3.3*</a>
+development library (Qt 4 not yet supported).</li>
   <li>At least the <a href="http://www.sleepycat.com/">Berkeley DB 4.1</a>
 database. FreeBSD users will have to use the 4.2 version due to compile
 issues and package availability.
 </li>
-  </li>
+  <li>Better to install the binary packages of the Qt and DB that are
+    relevant to your particular operating system.</li>
 </ol>
 
 <h3>Installing from source</h3>
