@@ -1,0 +1,129 @@
+/* XPM */
+static const char *papertrade[]={
+"17 18 108 2",
+".# c None",
+"Qt c None",
+"#A c #8d0000",
+".C c #970000",
+".6 c #9a0000",
+"#j c #c8852a",
+".7 c #d38f2a",
+".g c #cb0000",
+"#c c #990000",
+"#N c #9c6328",
+".l c #ae0000",
+".r c #c30000",
+"#H c #a86c28",
+".x c #be0000",
+".a c #cb0000",
+"#G c #9f6528",
+".w c #a10000",
+"#B c #b37529",
+"#p c #bf7e2a",
+".M c #930000",
+"#M c #935c27",
+".F c #c30000",
+".m c #c70000",
+"#d c #ca882a",
+".Z c #d99228",
+"#P c #7f6152",
+".G c #be0000",
+"#z c #9a0000",
+"#u c #990606",
+".5 c #a40000",
+".E c #cf7931",
+".X c #b41313",
+".W c #b50000",
+"#y c #b60000",
+"#K c #b97a26",
+".f c #bd1212",
+".q c #b61c1c",
+".b c #d12121",
+"#x c #b53012",
+".B c #b82828",
+"#E c #be802b",
+"#D c #bf9254",
+"#J c #c59f66",
+"#v c #ce8d2a",
+".Y c #940000",
+".V c #b80000",
+".D c #c9ac8b",
+".H c #cb0808",
+"#k c #d59330",
+".8 c #dc9b35",
+".N c #e3a137",
+"#O c #b38245",
+"#o c #c10d0d",
+"#i c #ca1515",
+"#r c #d37e47",
+"#b c #d91f1f",
+".h c #dd3e3e",
+".k c #dd7272",
+".1 c #dd8848",
+".c c #de5f5f",
+".e c #de6d6d",
+"#f c #de854c",
+"#I c #dea94f",
+".d c #e06d6d",
+".v c #e27070",
+"#C c #e2b15a",
+".L c #e55c5c",
+".9 c #e6c077",
+"#w c #e6c47f",
+".U c #e83030",
+"#l c #eac983",
+".y c #eb4848",
+".O c #ebc67a",
+"#L c #ebca82",
+".s c #ec5252",
+"#q c #ecbb60",
+"#m c #ed2d19",
+".P c #ee4830",
+"#e c #eec26a",
+"#F c #eecf88",
+"#. c #f04f39",
+"#t c #f10707",
+".n c #f18a8a",
+".0 c #f2c871",
+".4 c #f63535",
+".Q c #fa3e3e",
+".I c #fd6b6b",
+".R c #fe6060",
+"#s c #ff0202",
+"#n c #ff1313",
+"#g c #ff2828",
+"#h c #ff2929",
+"## c #ff3d3d",
+"#a c #ff3e3e",
+".2 c #ff5252",
+".3 c #ff5353",
+".S c #ff6767",
+".T c #ff6868",
+".J c #ff7c7c",
+".K c #ff7d7d",
+".z c #ff9090",
+".A c #ff9191",
+".t c #ffa4a4",
+".u c #ffa5a5",
+".o c #ffb8b8",
+".p c #ffb9b9",
+".i c #ffcbcb",
+".j c #ffcccc",
+"Qt.#.#.#.#.#.a.b.c.d.e.f.#.#.#QtQt",
+"Qt.#.#.#.#.g.h.i.j.j.j.k.l.#.#QtQt",
+"Qt.#.#.#.#.m.n.o.p.p.p.p.q.#.#QtQt",
+"Qt.#.#.#.#.r.s.t.u.u.u.u.v.w.#QtQt",
+"Qt.#.#.#.#.x.y.z.z.A.A.A.A.B.CQtQt",
+"Qt.D.E.F.G.H.I.J.J.K.K.K.K.L.MQtQt",
+"Qt.N.O.P.Q.R.S.S.T.T.U.V.W.X.YQtQt",
+"Qt.Z.0.1.2.2.2.2.3.4.5.6.#.#.#QtQt",
+"Qt.7.8.9#.#######a#b#c.#.#.#.#QtQt",
+"Qt.##d#e#f#g#g#g#h#i.#.#.#.#.#QtQt",
+"Qt.##j#k#l#m#n#n#n#o.#.#.#.#.#QtQt",
+"Qt.#.##p#q#r#s#s#t#u.#.#.#.#.#QtQt",
+"Qt.#.#.##v#w#x#y#z#A.#.#.#.#.#QtQt",
+"Qt.#.#.##B#C#D.#.#.#.#.#.#.#.#QtQt",
+"Qt.#.#.#.##E#F#G.#.#.#.#.#.#.#QtQt",
+"Qt.#.#.#.##H#I#J.#.#.#.#.#.#.#QtQt",
+"Qt.#.#.#.#.##K#L#M.#.#.#.#.#.#QtQt",
+"Qt.#.#.#.#.##N#O#P.#.#.#.#.#.#QtQt"};
